K8S/commands-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comds-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: commandservice
  template:
    metadata:
      labels:
        app: commandservice
    spec:
      containers:
        - name: commandservice
          image: aaaronivaaan/commandservice

---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: commandservice
  ports:
    - port: 80
      name: commandservice
      protocol: TCP
