K8S/mssql-platforms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msql-depl
spec:
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 1433
          volumeMounts:
            - name: mssqldb
              mountPath: /var/opt/mssql/data
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim
            
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: mssql
      port: 1433
      protocol: TCP
      targetPort: 1433

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql
  ports:
    - port: 1433
      protocol: TCP
      targetPort: 1433
