K8S/platform-deplo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-deplo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
        - name: platformservice
          image: aaaronivaaan/platformservice:latest

---

apiVersion: v1
kind: Service
metadata:
  name: platforms-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
    - name: platformservice
      port: 80
      protocol: TCP
      targetPort: 80
