K8S/platforms-service.yml
apiVersion: v1
kind: Service
metadata:
  name: platformservice-serv
spec:
  type: NodePort
  selector:
    app: platformservice
  ports:
    - name: platformservice
      protocol: TCP
      port: 80
      targetPort: 80
